RESOLVED FIXED226550
Fix build error with ENABLE_DFG_JIT=OFF
https://bugs.webkit.org/show_bug.cgi?id=226550
Summary Fix build error with ENABLE_DFG_JIT=OFF
Pablo Saavedra
Reported 2021-06-02 13:19:34 PDT
This patch fix the following build error with -DENABLE_JIT=ON -DENABLE_DFG_JIT=OFF: ``` /home/bot/yocto-rpi3-manual/builds/raspberrypi3-userland-wpe-nightly/tmp/work/cortexa7t2hf-neon-vfpv4-poky-linux-gnueabi/wpewebkit/trunk+gitAUTOINC+558850c0c1-r0/git/Source/JavaScriptCore/jit/JITPlan.cpp:159:14: error: 'logCompilationChanges' is not a member of 'JSC::DFG' 159 | if (DFG::logCompilationChanges(m_mode) || Options::logPhaseTimes()) | ^~~~~~~~~~~~~~~~~~~~~ ```
Attachments
patch (1.33 KB, patch)
2021-06-02 13:24 PDT, Pablo Saavedra
no flags
Pablo Saavedra
Comment 1 2021-06-02 13:24:18 PDT
Mark Lam
Comment 2 2021-06-02 14:09:52 PDT
Comment on attachment 430396 [details] patch r=me
EWS
Comment 3 2021-06-02 14:47:28 PDT
Committed r278375 (238402@main): <https://commits.webkit.org/238402@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430396 [details].
Radar WebKit Bug Importer
Comment 4 2021-06-02 14:48:20 PDT
Note You need to log in before you can comment on or make changes to this bug.