Fix build error with ENABLE_DFG_JIT=OFF https://bugs.webkit.org/show_bug.cgi?id=226550

Reviewed by Mark Lam.

* jit/JITPlan.cpp:
(JSC::JITPlan::compileInThread):


Canonical link: https://commits.webkit.org/238402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278375 268f45cc-cd09-0410-ab3c-d52691b4dbfc